Content changes and CSS fixes

--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "Made in pure HTML and CSS (SASS)",
-  "main": "js/main.js",
   "scripts": {
-    "test": "test",
-    "scss": "node-sass -watch sass/main.scss -o css/style.css",
-    "deploy": "gh-pages -d app"
+    "scss": "node-sass --watch sass -o css"
   },
   "author": "Przemysław Krogulski",
   "license": "ISC",
-  "homepage": "http://przemar5.github.io/portfolio",
+  "homepage": "https://github.com/Przemar5/Portfolio#readme",
   "dependencies": {
-    "node-sass": "^4.14.1",
+    "node-sass": "^9.0.0",
     "sass": "^1.26.10",
     "sass-watch": "^0.1.0"
   },
@@ -24,6 +21,5 @@
   "keywords": [],
   "bugs": {
     "url": "https://github.com/Przemar5/Portfolio/issues"
-  },
-  "homepage": "https://github.com/Przemar5/Portfolio#readme"
+  }
 }
